// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultipleFileUploadInfo > renders custom class names 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-multiple-file-upload__info test"
  >
    Foo
  </div>
</DocumentFragment>
`;

exports[`MultipleFileUploadInfo > renders with expected class names 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-multiple-file-upload__info"
  >
    Foo
  </div>
</DocumentFragment>
`;
